tests/ui/bad_escape.lex
fn main() {
    print("C:\path");
}
